--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,4 +75,16 @@
         <item name="android:fontFamily">@font/lato</item>
     </style>
 
+    <style name="Theme.PdfView.SelectedTheme" parent="Theme.PdfView.Light">
+        <item name="pdfView_backIcon">@drawable/ic_btn_back</item>
+        <item name="pdfView_actionBarTint">@color/colorPrimary</item>
+        <item name="pdfView_titleTextStyle">@style/ActionBarTitleTextAppearance</item>
+    </style>
+
+    <style name="ActionBarTitleTextAppearance" parent="android:TextAppearance.Material.Widget.Toolbar.Title">
+        <item name="android:fontFamily">@font/lato_bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
 </resources>
